// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change orientation 1`] = `
<DocumentFragment>
  <hr
    aria-orientation="vertical"
    class="css-8cfh0v"
    data-chakra-component="CDivider"
  />
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  <hr
    aria-orientation="horizontal"
    class="css-1onigce"
    data-chakra-component="CDivider"
  />
</DocumentFragment>
`;
